// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Correct Sign In form 1`] = `
<body>
  <div>
    <form
      class="MuiStack-root css-1m9b72w-MuiStack-root"
      novalidate=""
    >
      <h2
        class="MuiTypography-root MuiTypography-h4 css-pxw7rc-MuiTypography-root"
      >
        Sign in
      </h2>
      <div
        class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          for=":r7:"
          id=":r7:-label"
        >
          Email
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <input
            aria-describedby=":r7:-helper-text"
            aria-invalid="false"
            autocomplete="email"
            class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            id=":r7:"
            name="email"
            type="email"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-yjsfm1"
            >
              <span>
                Email
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
          id=":r7:-helper-text"
        >
          <span
            class="notranslate"
          >
            ​
          </span>
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          for=":r8:"
          id=":r8:-label"
        >
          Password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <input
            aria-describedby=":r8:-helper-text"
            aria-invalid="false"
            autocomplete="current-password"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
            form="[object Object]"
            id=":r8:"
            name="password"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1iimdd3-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="VisibilityOffIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78 3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-yjsfm1"
            >
              <span>
                Password
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
          id=":r8:-helper-text"
        >
          <span
            class="notranslate"
          >
            ​
          </span>
        </p>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge css-124vkh3-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
        id=":r9:"
        tabindex="0"
        type="submit"
      >
        submit
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1tjrup8-MuiTypography-root"
      >
        Create a new account?
         
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-yfgbbd-MuiTypography-root-MuiLink-root"
          href="/sign-up"
        >
          Sign up
        </a>
      </p>
    </form>
  </div>
</body>
`;

exports[`Correct Sign In page 1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-petvlv-MuiStack-root"
    >
      <header
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky css-1k8pp9v-MuiPaper-root-MuiAppBar-root"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-hyum1k-MuiToolbar-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="/welcome"
          >
            <div
              class="MuiBox-root css-151exlr"
            >
              <svg
                fill="none"
                height="90%"
                viewBox="0 0 38 43"
                width="90%"
              >
                <path
                  d="m1.873 31.326 1.552.896 17.29-29.946-1.552-.896-17.29 29.946Z"
                  fill="currentColor"
                />
                <path
                  d="M36.098 28.933H1.518v1.793h34.58v-1.793Z"
                  fill="currentColor"
                />
                <path
                  d="M2.202 29.94 19.5 39.927l.896-1.552-17.297-9.987-.896 1.552ZM17.228 3.913 34.524 13.9l.896-1.552L18.124 2.36l-.896 1.552Z"
                  fill="currentColor"
                />
                <path
                  d="m2.207 12.34.896 1.553L20.4 3.906l-.897-1.552-17.296 9.987Z"
                  fill="currentColor"
                />
                <path
                  d="m16.915 2.276 17.29 29.946 1.552-.896L18.467 1.38l-1.552.896ZM4.681 11.152H2.89v19.973h1.792V11.152Z"
                  fill="currentColor"
                />
                <path
                  d="M34.737 11.152h-1.792v19.973h1.792V11.152Z"
                  fill="currentColor"
                />
                <path
                  d="m18.41 37.813.784 1.355 15.043-8.685-.783-1.356-15.043 8.686Z"
                  fill="currentColor"
                />
                <path
                  d="M37.113 31.708a3.774 3.774 0 0 1-5.15 1.382 3.774 3.774 0 0 1-1.382-5.15 3.774 3.774 0 0 1 5.15-1.382 3.757 3.757 0 0 1 1.382 5.15ZM7.035 14.337a3.774 3.774 0 0 1-5.15 1.382 3.774 3.774 0 0 1-1.382-5.15 3.774 3.774 0 0 1 5.15-1.382 3.776 3.776 0 0 1 1.382 5.15ZM.514 31.708a3.776 3.776 0 0 1 1.382-5.15 3.776 3.776 0 0 1 5.15 1.382 3.776 3.776 0 0 1-1.382 5.15 3.771 3.771 0 0 1-5.15-1.382ZM30.592 14.337a3.776 3.776 0 0 1 1.382-5.15 3.776 3.776 0 0 1 5.15 1.382 3.776 3.776 0 0 1-1.382 5.15 3.774 3.774 0 0 1-5.15-1.382ZM18.813 42.278a3.764 3.764 0 0 1-3.768-3.768 3.764 3.764 0 0 1 3.768-3.768 3.764 3.764 0 0 1 3.768 3.768 3.771 3.771 0 0 1-3.768 3.768ZM18.813 7.536a3.764 3.764 0 0 1-3.768-3.768A3.764 3.764 0 0 1 18.813 0a3.764 3.764 0 0 1 3.768 3.768 3.764 3.764 0 0 1-3.768 3.768Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </a>
          <div
            class="MuiBox-root css-k62dlm"
          />
          <div
            class="MuiBox-root css-6su6fj"
          >
            <div
              class="MuiStack-root css-niqf4j-MuiStack-root"
            >
              <div
                class="MuiBox-root css-79elbk"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1kuq5xv-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="LanguageIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <a
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
                href="/sign-in"
                tabindex="0"
              >
                sign in
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
              <a
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
                href="/sign-up"
                tabindex="0"
              >
                sign up
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </header>
      <main
        class="MuiContainer-root MuiContainer-maxWidthSm css-14ors38-MuiContainer-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <form
            class="MuiStack-root css-1m9b72w-MuiStack-root"
            novalidate=""
          >
            <h2
              class="MuiTypography-root MuiTypography-h4 css-pxw7rc-MuiTypography-root"
            >
              Sign in
            </h2>
            <div
              class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r0:"
                id=":r0:-label"
              >
                Email
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-describedby=":r0:-helper-text"
                  aria-invalid="false"
                  autocomplete="email"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r0:"
                  name="email"
                  type="email"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Email
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
                id=":r0:-helper-text"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </p>
            </div>
            <div
              class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r1:"
                id=":r1:-label"
              >
                Password
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-describedby=":r1:-helper-text"
                  aria-invalid="false"
                  autocomplete="current-password"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                  form="[object Object]"
                  id=":r1:"
                  name="password"
                  type="password"
                  value=""
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                >
                  <button
                    aria-label="toggle password visibility"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1iimdd3-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="VisibilityOffIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78 3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Password
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
                id=":r1:-helper-text"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </p>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge css-124vkh3-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
              id=":r2:"
              tabindex="0"
              type="submit"
            >
              submit
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1tjrup8-MuiTypography-root"
            >
              Create a new account?
               
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-yfgbbd-MuiTypography-root-MuiLink-root"
                href="/sign-up"
              >
                Sign up
              </a>
            </p>
          </form>
        </div>
      </main>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ps6pg7-MuiPaper-root"
      >
        <div
          class="MuiStack-root css-1eoeowx-MuiStack-root"
        >
          <div
            class="MuiStack-root css-kdc3n8-MuiStack-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://github.com/Alyona8891"
            >
              <span
                class="MuiBadge-root css-1arcc7-MuiBadge-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-rounded css-12bapnq-MuiAvatar-root"
                >
                  <img
                    alt="Alyona's avatar"
                    class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
                    src="https://avatars.githubusercontent.com/u/79936182?v=4"
                  />
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-s1rlol-MuiBadge-badge"
                />
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://github.com/Lev1ossa"
            >
              <span
                class="MuiBadge-root css-1arcc7-MuiBadge-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-rounded css-12bapnq-MuiAvatar-root"
                >
                  <img
                    alt="Alexandr's avatar"
                    class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
                    src="https://avatars.githubusercontent.com/u/104268412?v=4"
                  />
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-s1rlol-MuiBadge-badge"
                />
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://github.com/lazy-goose"
            >
              <span
                class="MuiBadge-root css-3jxqn3-MuiBadge-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-rounded css-12bapnq-MuiAvatar-root"
                >
                  <img
                    alt="Maksim's avatar"
                    class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
                    src="https://avatars.githubusercontent.com/u/119844669?v=4"
                  />
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-s1rlol-MuiBadge-badge"
                />
              </span>
            </a>
          </div>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uwx3rb-MuiTypography-root-MuiLink-root"
            href="https://rs.school/react"
          >
            <time
              class="MuiBox-root css-1h14jth"
            >
              2024
            </time>
            <div
              class="MuiBox-root css-psrz38"
            >
              <span>
                RS
              </span>
              <span>
                SC HO OL
              </span>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Correct Sign Un form 1`] = `
<body>
  <div>
    <form
      class="MuiStack-root css-1m9b72w-MuiStack-root"
      novalidate=""
    >
      <h2
        class="MuiTypography-root MuiTypography-h4 css-pxw7rc-MuiTypography-root"
      >
        Sign up
      </h2>
      <div
        class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          for=":ra:"
          id=":ra:-label"
        >
          Email
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <input
            aria-describedby=":ra:-helper-text"
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
            id=":ra:"
            name="email"
            type="email"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-yjsfm1"
            >
              <span>
                Email
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
          id=":ra:-helper-text"
        >
          <span
            class="notranslate"
          >
            ​
          </span>
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          for=":rb:"
          id=":rb:-label"
        >
          Password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <input
            aria-invalid="false"
            autocomplete="new-password"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
            form="[object Object]"
            id=":rb:"
            name="password"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1iimdd3-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="VisibilityOffIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78 3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-yjsfm1"
            >
              <span>
                Password
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <div
        class="MuiBox-root css-mro3c9"
      >
        <p
          class="MuiFormHelperText-root css-1d1r5q-MuiFormHelperText-root"
        >
          Strong password contains at least
           
          <span
            class="MuiBox-root css-0"
          >
            <span
              class="MuiBox-root css-lhj5ms"
            >
              8 characters
            </span>
            , 
            <span
              class="MuiBox-root css-q2y3yl"
            >
              uppercase letter
            </span>
            , 
            <span
              class="MuiBox-root css-q2y3yl"
            >
              lowercase letter
            </span>
            , 
            <span
              class="MuiBox-root css-q2y3yl"
            >
              one digit
            </span>
            , 
            <span
              class="MuiBox-root css-q2y3yl"
            >
              one special character
            </span>
          </span>
          <span
            class="MuiStack-root css-1g7v78n-MuiStack-root"
          >
            <span
              class="MuiBox-root css-1dqsri6"
            />
            <span
              class="MuiBox-root css-1dqsri6"
            />
            <span
              class="MuiBox-root css-1dqsri6"
            />
            <span
              class="MuiBox-root css-1dqsri6"
            />
            <span
              class="MuiBox-root css-1dqsri6"
            />
            <span
              class="MuiBox-root css-1f5qj6m"
            />
          </span>
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          for=":rc:"
          id=":rc:-label"
        >
          Password
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
        >
          <input
            aria-describedby=":rc:-helper-text"
            aria-invalid="false"
            autocomplete="new-password"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
            form="[object Object]"
            id=":rc:"
            name="confirmPassword"
            type="password"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
          >
            <button
              aria-label="toggle password visibility"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1iimdd3-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="VisibilityOffIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78 3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="css-yjsfm1"
            >
              <span>
                Password
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
          id=":rc:-helper-text"
        >
          <span
            class="notranslate"
          >
            ​
          </span>
        </p>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge css-124vkh3-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
        id=":rd:"
        tabindex="0"
        type="submit"
      >
        submit
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1tjrup8-MuiTypography-root"
      >
        Already have an account?
         
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-yfgbbd-MuiTypography-root-MuiLink-root"
          href="/sign-in"
        >
          Sign in
        </a>
      </p>
    </form>
  </div>
</body>
`;

exports[`Correct Sign Un page 1`] = `
<body>
  <div>
    <div
      class="MuiStack-root css-petvlv-MuiStack-root"
    >
      <header
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky css-1k8pp9v-MuiPaper-root-MuiAppBar-root"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-hyum1k-MuiToolbar-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="/welcome"
          >
            <div
              class="MuiBox-root css-151exlr"
            >
              <svg
                fill="none"
                height="90%"
                viewBox="0 0 38 43"
                width="90%"
              >
                <path
                  d="m1.873 31.326 1.552.896 17.29-29.946-1.552-.896-17.29 29.946Z"
                  fill="currentColor"
                />
                <path
                  d="M36.098 28.933H1.518v1.793h34.58v-1.793Z"
                  fill="currentColor"
                />
                <path
                  d="M2.202 29.94 19.5 39.927l.896-1.552-17.297-9.987-.896 1.552ZM17.228 3.913 34.524 13.9l.896-1.552L18.124 2.36l-.896 1.552Z"
                  fill="currentColor"
                />
                <path
                  d="m2.207 12.34.896 1.553L20.4 3.906l-.897-1.552-17.296 9.987Z"
                  fill="currentColor"
                />
                <path
                  d="m16.915 2.276 17.29 29.946 1.552-.896L18.467 1.38l-1.552.896ZM4.681 11.152H2.89v19.973h1.792V11.152Z"
                  fill="currentColor"
                />
                <path
                  d="M34.737 11.152h-1.792v19.973h1.792V11.152Z"
                  fill="currentColor"
                />
                <path
                  d="m18.41 37.813.784 1.355 15.043-8.685-.783-1.356-15.043 8.686Z"
                  fill="currentColor"
                />
                <path
                  d="M37.113 31.708a3.774 3.774 0 0 1-5.15 1.382 3.774 3.774 0 0 1-1.382-5.15 3.774 3.774 0 0 1 5.15-1.382 3.757 3.757 0 0 1 1.382 5.15ZM7.035 14.337a3.774 3.774 0 0 1-5.15 1.382 3.774 3.774 0 0 1-1.382-5.15 3.774 3.774 0 0 1 5.15-1.382 3.776 3.776 0 0 1 1.382 5.15ZM.514 31.708a3.776 3.776 0 0 1 1.382-5.15 3.776 3.776 0 0 1 5.15 1.382 3.776 3.776 0 0 1-1.382 5.15 3.771 3.771 0 0 1-5.15-1.382ZM30.592 14.337a3.776 3.776 0 0 1 1.382-5.15 3.776 3.776 0 0 1 5.15 1.382 3.776 3.776 0 0 1-1.382 5.15 3.774 3.774 0 0 1-5.15-1.382ZM18.813 42.278a3.764 3.764 0 0 1-3.768-3.768 3.764 3.764 0 0 1 3.768-3.768 3.764 3.764 0 0 1 3.768 3.768 3.771 3.771 0 0 1-3.768 3.768ZM18.813 7.536a3.764 3.764 0 0 1-3.768-3.768A3.764 3.764 0 0 1 18.813 0a3.764 3.764 0 0 1 3.768 3.768 3.764 3.764 0 0 1-3.768 3.768Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </a>
          <div
            class="MuiBox-root css-k62dlm"
          />
          <div
            class="MuiBox-root css-6su6fj"
          >
            <div
              class="MuiStack-root css-niqf4j-MuiStack-root"
            >
              <div
                class="MuiBox-root css-79elbk"
              >
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1kuq5xv-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="LanguageIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
              <a
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
                href="/sign-in"
                tabindex="0"
              >
                sign in
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
              <a
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
                href="/sign-up"
                tabindex="0"
              >
                sign up
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </header>
      <main
        class="MuiContainer-root MuiContainer-maxWidthSm css-14ors38-MuiContainer-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <form
            class="MuiStack-root css-1m9b72w-MuiStack-root"
            novalidate=""
          >
            <h2
              class="MuiTypography-root MuiTypography-h4 css-pxw7rc-MuiTypography-root"
            >
              Sign up
            </h2>
            <div
              class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r3:"
                id=":r3:-label"
              >
                Email
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-describedby=":r3:-helper-text"
                  aria-invalid="false"
                  autocomplete="off"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r3:"
                  name="email"
                  type="email"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Email
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
                id=":r3:-helper-text"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </p>
            </div>
            <div
              class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r4:"
                id=":r4:-label"
              >
                Password
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  autocomplete="new-password"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                  form="[object Object]"
                  id=":r4:"
                  name="password"
                  type="password"
                  value=""
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                >
                  <button
                    aria-label="toggle password visibility"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1iimdd3-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="VisibilityOffIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78 3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Password
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              class="MuiBox-root css-mro3c9"
            >
              <p
                class="MuiFormHelperText-root css-1d1r5q-MuiFormHelperText-root"
              >
                Strong password contains at least
                 
                <span
                  class="MuiBox-root css-0"
                >
                  <span
                    class="MuiBox-root css-lhj5ms"
                  >
                    8 characters
                  </span>
                  , 
                  <span
                    class="MuiBox-root css-q2y3yl"
                  >
                    uppercase letter
                  </span>
                  , 
                  <span
                    class="MuiBox-root css-q2y3yl"
                  >
                    lowercase letter
                  </span>
                  , 
                  <span
                    class="MuiBox-root css-q2y3yl"
                  >
                    one digit
                  </span>
                  , 
                  <span
                    class="MuiBox-root css-q2y3yl"
                  >
                    one special character
                  </span>
                </span>
                <span
                  class="MuiStack-root css-1g7v78n-MuiStack-root"
                >
                  <span
                    class="MuiBox-root css-1dqsri6"
                  />
                  <span
                    class="MuiBox-root css-1dqsri6"
                  />
                  <span
                    class="MuiBox-root css-1dqsri6"
                  />
                  <span
                    class="MuiBox-root css-1dqsri6"
                  />
                  <span
                    class="MuiBox-root css-1dqsri6"
                  />
                  <span
                    class="MuiBox-root css-1f5qj6m"
                  />
                </span>
              </p>
            </div>
            <div
              class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r5:"
                id=":r5:-label"
              >
                Password
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-describedby=":r5:-helper-text"
                  aria-invalid="false"
                  autocomplete="new-password"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                  form="[object Object]"
                  id=":r5:"
                  name="confirmPassword"
                  type="password"
                  value=""
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                >
                  <button
                    aria-label="toggle password visibility"
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1iimdd3-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="VisibilityOffIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78 3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Password
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
                id=":r5:-helper-text"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </p>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge css-124vkh3-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
              id=":r6:"
              tabindex="0"
              type="submit"
            >
              submit
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1tjrup8-MuiTypography-root"
            >
              Already have an account?
               
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-yfgbbd-MuiTypography-root-MuiLink-root"
                href="/sign-in"
              >
                Sign in
              </a>
            </p>
          </form>
        </div>
      </main>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ps6pg7-MuiPaper-root"
      >
        <div
          class="MuiStack-root css-1eoeowx-MuiStack-root"
        >
          <div
            class="MuiStack-root css-kdc3n8-MuiStack-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://github.com/Alyona8891"
            >
              <span
                class="MuiBadge-root css-1arcc7-MuiBadge-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-rounded css-12bapnq-MuiAvatar-root"
                >
                  <img
                    alt="Alyona's avatar"
                    class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
                    src="https://avatars.githubusercontent.com/u/79936182?v=4"
                  />
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-s1rlol-MuiBadge-badge"
                />
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://github.com/Lev1ossa"
            >
              <span
                class="MuiBadge-root css-1arcc7-MuiBadge-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-rounded css-12bapnq-MuiAvatar-root"
                >
                  <img
                    alt="Alexandr's avatar"
                    class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
                    src="https://avatars.githubusercontent.com/u/104268412?v=4"
                  />
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-s1rlol-MuiBadge-badge"
                />
              </span>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
              href="https://github.com/lazy-goose"
            >
              <span
                class="MuiBadge-root css-3jxqn3-MuiBadge-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-rounded css-12bapnq-MuiAvatar-root"
                >
                  <img
                    alt="Maksim's avatar"
                    class="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
                    src="https://avatars.githubusercontent.com/u/119844669?v=4"
                  />
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-s1rlol-MuiBadge-badge"
                />
              </span>
            </a>
          </div>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-uwx3rb-MuiTypography-root-MuiLink-root"
            href="https://rs.school/react"
          >
            <time
              class="MuiBox-root css-1h14jth"
            >
              2024
            </time>
            <div
              class="MuiBox-root css-psrz38"
            >
              <span>
                RS
              </span>
              <span>
                SC HO OL
              </span>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;
